--- a/src/App.scss
+++ b/src/App.scss
@@ -66,4 +66,11 @@ header {
       }
     }
   }
+
+  canvas {
+    display: flex;
+    flex-direction: column;
+    width: 100vw;
+    height: 100vh;
+  }
 }
